@@ -1,9 +1,11 @@
 package gencoders.e_tech_store_app.storage;
 
 import com.cloudinary.Cloudinary;
+import com.cloudinary.Transformation;
 import com.cloudinary.utils.ObjectUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.FilenameUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -17,59 +19,69 @@ public class CloudinaryService {
 
     private final Cloudinary cloudinary;
 
+    private static final int PROFILE_PICTURE_SIZE = 400;
+    private static final int PRODUCT_IMAGE_WIDTH = 800;
+    private static final int PRODUCT_IMAGE_HEIGHT = 800;
+    private static final String PROFILE_FOLDER = "profile-pictures";
+    private static final String PRODUCT_FOLDER = "products";
+
+    public String uploadProfilePicture(MultipartFile file, String username) {
+        validateFile(file);
+        String folder = PROFILE_FOLDER + "/" + username;
+
+        return doUpload(file, Map.of(
+                "folder", folder,
+                "transformation", new Transformation()
+                        .width(PROFILE_PICTURE_SIZE)
+                        .height(PROFILE_PICTURE_SIZE)
+                        .crop("fill")
+                        .gravity("face")
+                        .radius("max")
+                        .quality("auto:good")
+                        .fetchFormat("auto"),
+                "tags", List.of("profile_picture", username)
+        ));
+    }
+
+    public String uploadProductImage(MultipartFile file, String productId) {
+        validateFile(file);
+        String folder = PRODUCT_FOLDER + (productId != null ? "/" + productId : "");
+
+        return doUpload(file, Map.of(
+                "folder", folder,
+                "transformation", new Transformation()
+                        .width(PRODUCT_IMAGE_WIDTH)
+                        .height(PRODUCT_IMAGE_HEIGHT)
+                        .crop("pad")
+                        .background("white")
+                        .quality("auto:good")
+                        .fetchFormat("auto"),
+                "tags", productId != null ? List.of("product_image", productId) : List.of("product_image")
+        ));
+    }
+
     public String uploadFile(MultipartFile file, String folder) {
         validateFile(file);
-
-        try {
-            String publicId = generatePublicId(folder);
-            Map<String, Object> uploadParams = ObjectUtils.asMap(
-                    "folder", folder,
-                    "public_id", publicId,
-                    "resource_type", "auto",
-                    "quality", "auto:good",
-                    "fetch_format", "auto"
-            );
-
-            Map<?, ?> result = cloudinary.uploader().upload(file.getBytes(), uploadParams);
-            String url = result.get("secure_url").toString();
-            log.info("File uploaded successfully to: {}", url);
-            return url;
-
-        } catch (IOException ex) {
-            log.error("Image upload failed for file: {}", file.getOriginalFilename(), ex);
-            throw new RuntimeException("Image upload failed: " + ex.getMessage(), ex);
-        }
+        return doUpload(file, Map.of(
+                "folder", folder,
+                "quality", "auto:good",
+                "fetch_format", "auto"
+        ));
     }
 
     public String uploadWithTransformation(MultipartFile file, String folder, int width, int height) {
         validateFile(file);
 
-        try {
-            String publicId = generatePublicId(folder);
-            Map<String, Object> uploadParams = ObjectUtils.asMap(
-                    "folder", folder,
-                    "public_id", publicId,
-                    "transformation", new Object[] {
-                            ObjectUtils.asMap(
-                                    "width", width,
-                                    "height", height,
-                                    "crop", "fill",
-                                    "gravity", "face",
-                                    "quality", "auto:good",
-                                    "fetch_format", "auto"
-                            )
-                    }
-            );
-
-            Map<?, ?> result = cloudinary.uploader().upload(file.getBytes(), uploadParams);
-            String url = result.get("secure_url").toString();
-            log.info("File uploaded with transformation to: {}", url);
-            return url;
-
-        } catch (IOException ex) {
-            log.error("Image upload with transformation failed", ex);
-            throw new RuntimeException("Image upload failed: " + ex.getMessage(), ex);
-        }
+        return doUpload(file, Map.of(
+                "folder", folder,
+                "transformation", new Transformation()
+                        .width(width)
+                        .height(height)
+                        .crop("fill")
+                        .gravity("face")
+                        .quality("auto:good")
+                        .fetchFormat("auto")
+        ));
     }
 
     public void deleteFile(String imageUrl) {
@@ -77,8 +89,8 @@ public class CloudinaryService {
             if (imageUrl != null && !imageUrl.trim().isEmpty()) {
                 String publicId = extractPublicIdFromUrl(imageUrl);
                 if (publicId != null) {
-                    cloudinary.uploader().destroy(publicId, ObjectUtils.emptyMap());
-                    log.info("File deleted successfully: {}", publicId);
+                    Map<?, ?> result = cloudinary.uploader().destroy(publicId, ObjectUtils.emptyMap());
+                    log.info("File deleted successfully: {} (Result: {})", publicId, result.get("result"));
                 }
             }
         } catch (IOException ex) {
@@ -87,30 +99,69 @@ public class CloudinaryService {
         }
     }
 
-    private String extractPublicIdFromUrl(String imageUrl) {
+    public List<String> getUserProfilePictures(String username) {
         try {
-            String[] parts = imageUrl.split("/");
-            if (parts.length >= 7) {
-                StringBuilder publicId = new StringBuilder();
-                for (int i = 7; i < parts.length; i++) {
-                    if (i > 7) publicId.append("/");
-                    publicId.append(parts[i]);
-                }
-                String result = publicId.toString();
-                int lastDot = result.lastIndexOf('.');
-                if (lastDot > 0) {
-                    result = result.substring(0, lastDot);
-                }
-                return result;
+            String folder = PROFILE_FOLDER + "/" + username;
+            Map<?, ?> result = cloudinary.search()
+                    .expression("folder:" + folder)
+                    .sortBy("created_at", "desc")
+                    .maxResults(10)
+                    .execute();
+
+            List<Map<?, ?>> resources = (List<Map<?, ?>>) result.get("resources");
+            List<String> urls = new ArrayList<>();
+            for (Map<?, ?> resource : resources) {
+                urls.add(resource.get("secure_url").toString());
             }
+
+            return urls;
         } catch (Exception e) {
-            log.warn("Could not extract public ID from URL: {}", imageUrl);
+            log.error("Failed to get profile pictures for user: {}", username, e);
+            return new ArrayList<>();
         }
-        return null;
     }
 
-    private String generatePublicId(String folder) {
-        return folder + "_" + UUID.randomUUID().toString().replace("-", "");
+    public List<String> getProductImages(String productId) {
+        try {
+            String folder = PRODUCT_FOLDER + "/" + productId;
+            Map<?, ?> result = cloudinary.search()
+                    .expression("folder:" + folder)
+                    .sortBy("created_at", "desc")
+                    .maxResults(20)
+                    .execute();
+
+            List<Map<?, ?>> resources = (List<Map<?, ?>>) result.get("resources");
+            List<String> urls = new ArrayList<>();
+            for (Map<?, ?> resource : resources) {
+                urls.add(resource.get("secure_url").toString());
+            }
+
+            return urls;
+        } catch (Exception e) {
+            log.error("Failed to get product images for product: {}", productId, e);
+            return new ArrayList<>();
+        }
+    }
+
+    private String extractPublicIdFromUrl(String imageUrl) {
+        try {
+            String base = imageUrl.substring(imageUrl.indexOf("/upload/") + 8);
+            base = base.replaceAll("^v\\d+/", "");
+            return FilenameUtils.removeExtension(base);
+        } catch (Exception e) {
+            log.warn("Could not extract public ID from URL: {}", imageUrl);
+            return null;
+        }
+    }
+
+    private String doUpload(MultipartFile file, Map<String, Object> options) {
+        try {
+            Map<?, ?> result = cloudinary.uploader().upload(file.getBytes(), options);
+            return result.get("secure_url").toString();  // Cloudinary will handle the signature and timestamp internally
+        } catch (IOException ex) {
+            log.error("Upload failed for file: {}", file.getOriginalFilename(), ex);
+            throw new RuntimeException("Upload failed: " + ex.getMessage(), ex);
+        }
     }
 
     private void validateFile(MultipartFile file) {
@@ -127,11 +178,13 @@ public class CloudinaryService {
             throw new IllegalArgumentException("Only image files are allowed");
         }
 
-        String[] allowedTypes = {"image/jpeg", "image/png", "image/gif", "image/webp"};
-        boolean isAllowed = Arrays.asList(allowedTypes).contains(contentType);
-
-        if (!isAllowed) {
+        List<String> allowed = List.of("image/jpeg", "image/png", "image/gif", "image/webp");
+        if (!allowed.contains(contentType)) {
             throw new IllegalArgumentException("Only JPEG, PNG, GIF, and WebP images are allowed");
         }
+    }
+    // Add this method to your CloudinaryService class
+    public Map<String, Object> testConnection() throws Exception {
+        return cloudinary.api().ping(new HashMap<>());
     }
 }
